--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Dropdown -->
     <div class="dropdown">
-    <label for="dialect">ডায়ালেক্ট বাছাই করুন:</label>
+    <label for="dialect">উপভাষা নির্বাচন করুন:</label>
     <select id="dialect">
         <option value="">-- Select --</option>
 
