--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <!-- Backend URL (set manually for Netlify) -->
   <script>
     // ⚠️ Replace this with your actual ngrok/VPS/shared hosting backend URL
-    window.APP_CONFIG = { BACKEND_URL: "https://random-id.ngrok-free.app/shobdosetu" };
+    window.APP_CONFIG = { BACKEND_URL: "https://78ad21910b4a.ngrok-free.app/shobdosetu" };
   </script>
 
   <!-- Frontend Logic -->
