--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
   <!-- Backend URL (set manually for Netlify) -->
   <script>
-    // ⚠️ Replace this with your actual ngrok/VPS/shared hosting backend URL
-    window.APP_CONFIG = { BACKEND_URL: "https://78ad21910b4a.ngrok-free.app/shobdosetu" };
+    // Replace this with your actual ngrok/VPS/shared hosting backend URL
+    window.APP_CONFIG = { BACKEND_URL: " https://5b84d225be9e.ngrok-free.app/shobdosetu" };
   </script>
 
   <!-- Frontend Logic -->
