--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
     <span id="recordingText">রেকর্ড হচ্ছে... একটি মাত্র বাক্য পড়ুন</span>
   </div>
 
-  <!-- Backend URL (set manually for Netlify) -->
+  <!-- Backend URL (configure later for your deployment) -->
   <script>
-    // Replace this with your actual ngrok/VPS/shared hosting backend URL
-    window.APP_CONFIG = { BACKEND_URL: " https://5b84d225be9e.ngrok-free.app/shobdotori" };
+    window.APP_CONFIG = { BACKEND_URL: "" }; // set your API endpoint here
   </script>
 
   <!-- Frontend Logic -->
